add POST /api/posts (create post)